gatekeeper/constraints/no-latest-tag-template.yaml
# ConstraintTemplate: Cấm image tag :latest
# F-01 – Ngăn không cho dùng image tag "latest"
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredtags
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredTags
      validation:
        openAPIV3Schema:
          type: object
          properties:
            tags:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredtags

        violation[{"msg": msg}] {
          container := input.review.object.spec.template.spec.containers[_]
          tag := input.parameters.tags[_]
          endswith(container.image, concat("", [":", tag]))
          msg := sprintf("Container '%v' uses forbidden image tag '%v'", [container.name, tag])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.template.spec.initContainers[_]
          tag := input.parameters.tags[_]
          endswith(container.image, concat("", [":", tag]))
          msg := sprintf("InitContainer '%v' uses forbidden image tag '%v'", [container.name, tag])
        }
