gatekeeper/constraints/require-resources-limits-template.yaml
# ConstraintTemplate: Bắt buộc resources.limits
# F-02 – Mỗi container phải định nghĩa resources.limits
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: requireresourceslimits
spec:
  crd:
    spec:
      names:
        kind: RequireResourcesLimits
      validation:
        openAPIV3Schema:
          type: object
  targets:
    - target: admission.k8s.gatekeeper.sh
      code:
        - engine: rego
          source: |
            package requireresourceslimits

            violation[{"msg": msg}] {
              container := input.review.object.spec.template.spec.containers[_]
              not container.resources.limits
              msg := sprintf("Container '%v' must define resources.limits (memory/CPU)", [container.name])
            }
